[package]
name = "msbaker-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-io = "0.4.0"
rp2040-pac = "0.4.0"
rp2040-hal={path="../rp-hal/rp2040-hal", features=["critical-section-impl"]}
rp2040-boot2= "0.2.0"
rp2040-hal-macros = "0.1.0"
critical-section = "1.0.0"
fugit = "0.3.6"
pio-proc = "0.2.0"
pio = "0.2.0"
snafu = { version = "0.7.4", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
ape-fatfs = { path="../ape-fatfs", default-features = false, version = "0.1.0"}
ape-mbr = { version = "0.1.0"}
ape-table-trig = { version = "0.1.0" }
rp-sdio = { path = "../rp-sdio/", version = "0.0.1" }
num_enum = { version = "0.6.1", default-features = false }
bytemuck = {version = "1.13.1", default-features = false }
libm = "0.2.6"
